# cdrom-daemon-orig

./: .gitignore  README.md  configure.in  doxygen.config
recipe/: cdrom-daemon_git.bb
src/: .gitignore  Makefile.am  atapi.c  blktap.c  main.c  project.h  rpc.c  xenstore.c
